sterlang/examples/neg/src/n07.erlt
-module(n07).
-export([inferred_funs/0]).

-enum option(A) :: (none, some{A}).

getOrElse(Opt, Alt) ->
  case Opt of
      option.some{X} -> X;
      option.none -> Alt
  end.

%% the type for rec cannot be expressed without recursion
unBox(Rec, _) ->
  getOrElse(Rec#(next), Rec).

-spec inferred_funs() -> [term()].
[unchecked]
inferred_funs() -> [
    fun unBox/2
].
